Làm xong gần hết ùi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:label="@string/title_activity_main2"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RegisterActivity" />
+        <activity android:name=".ListViewActivity" />
         <activity android:name=".ShowUserActivity"></activity>
     </application>
 
