--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,15 @@
             android:name=".Main2Activity"
             android:label="@string/title_activity_main2"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".ListViewActivity" />
-        <activity android:name=".ShowUserActivity"></activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".ListViewActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".ShowUserActivity"
+            android:parentActivityName=".Main2Activity"></activity>
     </application>
 
 </manifest>
